--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Ajude Pets - ONG</title>
     <style>
         body {
+            <img src="Imagem do WhatsApp 2025-10-28 às 12.48.56.jpeg" 
+     alt="Logo Ajude Pets" 
+     style="width:200px; margin-top:20px; border-radius:10px;">
             font-family: Arial, sans-serif;
             background-color: #ffffff;
             color: #003366;
