--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<img src="logo-ajude-pets.png" alt="Logo Ajude Pets" style="width:200px; margin-top:20px;">
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
