Fix image source in index.html

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Ajude Pets - ONG</title>
     <style>
         body {
-            <img src="Imagem do WhatsApp 2025-10-28 às 12.48.56.jpeg" 
+            <img src="imagem site.jpeg" 
      alt="Logo Ajude Pets" 
      style="width:200px; margin-top:20px; border-radius:10px;">
             font-family: Arial, sans-serif;
