Fix image source paths in index.html
Updated image source paths to relative paths.

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<img src="logo-ajude-pets.png" alt="Logo Ajude Pets" style="width:200px; margin-top:20px;">
+<img src="./logo-ajude-pets.png" alt="Logo Ajude Pets" style="width:200px; margin-top:20px;">
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
@@ -7,7 +7,7 @@
     <title>Ajude Pets - ONG</title>
     <style>
         body {
-            <img src="imagem site.jpeg" 
+            <img src="./imagem site.jpeg" 
      alt="Logo Ajude Pets" 
      style="width:200px; margin-top:20px; border-radius:10px;">
             font-family: Arial, sans-serif;
